# Video.Server.GStreamer

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt
app/PiSubmarine/Video/Server/GStreamer/: main.cpp
docs/: Architecture.md  Capture.bat  CaptureMultiudp.GstOnly.sh  CaptureMultiudp.bat  CaptureMultiudp.sh  Listen.bat  Pipelines.txt  Record.bat
public/PiSubmarine/Video/Server/GStreamer/: Config.h  Controller.h  Head.h  Source.h
src/: CMakeLists.txt
src/PiSubmarine/Video/Server/GStreamer/: Controller.cpp  ControllerCore.cpp  ControllerCore.h  GstreamerPipeline.cpp  GstreamerPipeline.h  Pipeline.h  StaticPluginRegistration.cpp  StaticPluginRegistration.h
test/: CMakeLists.txt
test/PiSubmarine/Video/Server/GStreamer/: ConfigTest.cpp  ControllerCoreTest.cpp  GstreamerPipelineTest.cpp
